--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.android.support:recyclerview-v7:27.1.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0' // Retrofit
-    compile 'com.google.code.gson:gson:2.8.2' // GSON
-    compile 'com.squareup.picasso:picasso:2.5.2' // Picasso
-    compile 'com.google.guava:guava:24.1-android' // Guava
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0' // Retrofit
+    implementation 'com.google.code.gson:gson:2.8.2' // GSON
+    implementation 'com.squareup.picasso:picasso:2.5.2' // Picasso
+    implementation 'com.google.guava:guava:24.1-android' // Guava
 }
